src/App.css
/* ... */
.fnt-weight-500 {
  font-weight: 500;
}

.fnt-weight-600 {
  font-weight: 600;
}

.fnt-weight-700 {
  font-weight: 700;
}

/* Buttons */

.btn-group > .btn-group:not(:first-child) > .btn,
.btn-group > .btn:not(:first-child),
.btn-group > .btn-group:not(:first-child) > .btn,
.btn-group > .btn:not(:last-child):not(.dropdown-toggle),
.inner-rounded-corners > * > .form-control, 
.more-rounded {
  border-radius: 4em;
}

.navbar-collapse > .form-inline {
  width: 100%;
}

.form-control {
  padding-top: 0.375rem;
  padding-bottom: 0.375em;
  padding: 0.25rem 0.5rem;
  font-size: 0.875rem;
  line-height: 1.5;
}

.form-control.left-rounded {
  padding-left: 24px;
}

.search-form-custom::before,
.search-form-custom > input::before,
.surround-parent {
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.surround-parent-inner, .surround-parent-inner > * {
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.left-rounded {
  border-top-left-radius: 4em;
  border-bottom-left-radius: 4em;
}

.right-rounded {
  border-top-right-radius: 4em;
  border-bottom-right-radius: 4em;
}

.search-form-custom {
  position: relative;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 100%;
}

.input-group-append-more {
  margin-left: 0px;
  display: flex;
}

.btn-outline-success {
  color: #46b29d;
  background-color: transparent;
  background-image: none;
  border-color: #46b29d;
}

.btn-outline-success:hover,
.btn-outline-success:not(:disabled):not(.disabled).active,
.btn-outline-success:not(:disabled):not(.disabled):active,
.show > .btn-outline-success.dropdown-toggle {
  background-color: #46b29d;
  border-color: #46b29d;
  color: white;
}

/* Nav Bar */
.full-parent-width::before {
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.bottom-border {
  border-bottom: #ebe9e9;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.min-navbar-button-width {
  min-width: 9em;
}

.nav-bar-bottom-border {
  box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.08);
}

.navbar { 
  position: fixed; 
  top: 0; 
  min-width: 100%; 
  background: white; 
  z-index: 1; 
}

.navbar-inner-height > * > .nav-bar-singular-tab {
  margin-top: 0.7em;
}

.profile-nav.nav-tabs {
  border: none;
}

.nav-link {
  border-left: 0!important;
  border-top: 0!important;
  border-right: 1px solid rgba(0, 0, 0, 0.08)!important;
  border-top-left-radius: 0rem!important;
  border-top-right-radius: 0rem!important;
}
.nav-link:hover {
  border-bottom: 4px solid #E37B40;
}

.nav-link.profile-nav {
  color: #324D5C !important;
}

.nav-link.profile-nav:hover {
  color: #46b29d !important;
}

.active.nav-link.profile-nav {
  color: white !important;
  background-color: #324D5C !important;
  border-radius: 3px !important;
}

.griz-real-body { 
  margin-top: 6%; 
}

a:not([href]):not([tabindex]).active {
  text-decoration: none;
  border-bottom: 4px solid #46b29d;
}

a:not([href]):not([tabindex]) {
  text-decoration: none;
}

.nav-link.active {
  background-color: #324D5C !important;
}

/* Product Carousel */

.img-thumbnail {
  padding: .25rem;
  background-color: #fff;
  border: none!important;
  border-radius: .3rem!important;
  max-width: 100%;
  height: auto;
}

/* Product Grids */

.product-card {
  line-height: 1.2;
}

.card.product-card {
  border: none;
}

.card-body.inner-product-card {
  border-top: 1px solid #f0f4f7;
  margin-top: 5px;
}

.inner-product-card:hover, .inner-product-card > a:not([href]):hover, a:-webkit-any-link {
  text-decoration: none;
}

.inner-product-card {
  color: black;
  padding-left: 0;
  padding-right: 0;
}

.inner-product-card.card-text {
  text-transform: capitalize;
  text-overflow: ellipsis;
}

.product-name {
  color: black;
}

.imageGrid {
  display: flex;
  flex-flow: wrap;
  object-fit: cover;
}

.straight-grid {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.nav-bar-profile-img {
  object-fit: cover;
  width: 30px;
  height: 30px;
  border-radius: 50%;
}

.main-profile-img {
  object-fit: cover;
  width: 100px;
  height: 100px;
  border-radius: 50%;
}

.dropdown-menu.right-anchor {
  right: 0!important;
  left: -100px;
}

/* Detailed Product */
.left-border-line {
  border-left: 1px solid #777777;
}

.bottom-border-line {
  border-bottom: 1px solid #bdbdbd;
}

.minimal-line-input-div input {
  border: none;
  box-shadow: none;
  border-bottom: 1px solid #777777;
}

.minimal-line-input-div input:focus {
  outline: #e9e9e9 auto 1px;
}

/*categoryscrolllist*/
.cat-scroll {
  max-height: 7cm;
  overflow: auto;
}

.cat-scroll-button {
  min-width: 200px;
  max-width: 250px;
  overflow: auto;
}

/* Admin/Vendor Portal */
.collapsable-block-appearance > .collapsable-block-trigger:parent {
  display: none;
}

.toggle-portal-appearance > .toggle-portal-trigger:parent {
  display: none;
}

/*vendorscrolllist*/
.vendor-scroll{
  max-height: 7cm;
  overflow: auto;
  max-width: 250px; 
}

.vendor-scroll-button{
  min-width: 200px;
  max-width: 250px;
  overflow: auto;
}

/* Profile sidebar */
.profile-bg-color {
  background-color: #859ca8;
}

.profile-header {
  text-align: left;
  text-emphasis: bold;
  font-size: 20px;
}

.profile-header-text {
  background: #e0e0e0;
  padding-left: 5%;
  margin-bottom: 10px;
  text-transform: uppercase;
  padding-top: 0.4em;
  padding-bottom: 0.4em;
}

.profile-header-button {
  color: black;
  float: right;
  padding-top: 0.05em;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0.4em;
}

.profile-userpic img {
  float: none;
  margin: 0 auto;
  width: 50%;
  height: 50%;
  -webkit-border-radius: 30% !important;
  -moz-border-radius: 30% !important;
  border-radius: 30% !important;
}

.profile-userpic > img {
  max-width: 100px;
  max-height: 100px;
}

.profile-header::before {
  left: 0;
  right: 0;
  top: 0;
}

.profile-header-text {
  color: black;
}
/* ... */

